--- a/Project_Manager/frontend/src/index.css
+++ b/Project_Manager/frontend/src/index.css
@@ -67,5 +67,12 @@
   body {
     background-color: #1F1F1F; 
     color: white;
+    margin: 0;
+    padding: 0;
   }
+}
+
+#root{
+  padding: 0;
+  margin:auto;
 }
