--- a/Project_Manager/frontend/src/index.css
+++ b/Project_Manager/frontend/src/index.css
@@ -70,6 +70,15 @@
     margin: 0;
     padding: 0;
   }
+
+  input{
+    border-radius: 10px;
+  }
+
+  #formulario{
+    border-radius: 20px;
+    box-shadow:0px 0px 15px 2px rgba(229, 57, 57, 1);
+  }
 }
 
 #root{
